fix(pf4): updated form buttons to fix spacing.

--- a/packages/pf4-component-mapper/src/form-fields/layout-components-styles.scss
+++ b/packages/pf4-component-mapper/src/form-fields/layout-components-styles.scss
@@ -17,7 +17,3 @@
   grid-column-end: 12;
   align-self: end;
 }
-
-.data-driven-forms__pf4-button-group {
-  margin-bottom: 16px
-}
